src/test/ui/issues/issue-4517.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-4517.rs:5:5
   |
LL |     bar(foo);
   |     ^^^^---^
   |         |
   |         expected `usize`, found `[u8; 4]`
   |
note: function defined here
  --> $DIR/issue-4517.rs:1:4
   |
LL | fn bar(int_param: usize) {}
   |    ^^^ ----------------
help: provide an argument of the correct type
   |
LL |     bar({usize});
   |     ^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
